--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.21.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-json-view": "^1.20.4",
     "react-json-viewer": "^2.1.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
