--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,4 @@
 [build]
-  command = "yarn build && cd functions/cors && yarn build"
+  command = "yarn build && cd functions/node-fetch && yarn"
   functions = "functions"
   publish = "dist"
